--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@apollo/client": "^3.0.0",
+    "@popperjs/core": "2.11.6",
     "@types/bootstrap": "^5.2.6",
+    "@types/node": "*",
     "apollo-angular": "5.0.0",
     "bootstrap": "^5.2.3",
     "graphql": "^16",
+    "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
