--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@apollo/client": "^3.0.0",
+    "@apollo/client": "^3.7.15",
     "@popperjs/core": "2.11.7",
     "@types/bootstrap": "^5.2.6",
     "@types/node": "*",
     "apollo-angular": "5.0.0",
     "bootstrap": "^5.3.0",
     "graphql": "^16",
+    "graphql-ws": "^5.13.1",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "ts-node": "^10.9.1",
