--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql": "^16",
     "graphql-ws": "^5.13.1",
     "ngx-infinite-scroll": "^16.0.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
