Add prettier to Eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,5 +38,10 @@
       ],
       "rules": {}
     }
-  ]
+  ],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
